# Except-Plugin

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: builder.rs  e_msg.rs  easy.rs  flex_impl.rs  index.rs  macros.rs  mod.rs  null_pointer.rs  sql.rs  unsupported.rs
tests/: Cargo.toml
tests/src/: main.rs
tests/src/lib/: define_exception.rs  mod.rs  test_array_out_of_bounds_exception.rs  test_easy_exception.rs  test_null_pointer.rs  test_null_pointer_exception.rs  test_sql_exception.rs  test_super_builder.rs  test_super_exception.rs  test_unsupported_exception.rs
